# Vehicle_software_foundation

./: README.md  第二次实践报告.rar
第一次实践报告/: CMakeLists.txt  smartcars.txt
第一次实践报告/src/: SmartCar.cpp  SmartCar.h  main.cpp
第三次实践报告/: CMakeLists.txt
第三次实践报告/src/: ObstaclePublisher.cpp  ObstaclePublisher.h  ObstacleSubscriber.cpp  ObstacleSubscriber.h  main.cpp  publisher_main.cpp  subscriber_main.cpp
第二次实践报告/: CMakeLists.txt  smartcars.txt
第二次实践报告/src/: AGXKit.cpp  AGXKit.h  Battery.cpp  Battery.h  Chassis.cpp  Chassis.h  Gyroscope.cpp  Gyroscope.h  LCD.cpp  LCD.h  Lidar.cpp  Lidar.h  SmartCar.cpp  SmartCar.h  StereoCamera.cpp  StereoCamera.h  Student.cpp  Student.h  Tire.cpp  Tire.h  main.cpp
